--- a/Projetos.html
+++ b/Projetos.html
@@ -22,13 +22,29 @@
                 <a href="">Daniel Arruda</a>
             </div>
             <div class="topnav-right">
-                <a class="active" href="index.html">Home</a>
+                <div class="active" id="btnMenuMobile">
+                    <span class="line-hamburger"></span>
+                    <span class="line-hamburger"></span>
+                    <span class="line-hamburger"></span>
+                </div>
+                <a href="#">Home</a>
                 <a href="SobreMim.html">Sobre mim</a>
                 <a href="Projetos.html">Projetos</a>
                 <a href="Contato.html">Contato</a>
             </div>
         </div>
     </header>
+
+    <div class="menu-mobile disable" id="menuMobile">
+        <div class="active" id="btnFechaMenuMobile">
+            <span class="line-hamburger" style="transform: rotate(45deg);"></span>
+            <span class="line-hamburger" style="transform: rotate(-45deg);"></span>
+        </div>
+        <a href="index.html">Home</a>
+        <a href="SobreMim.html">Sobre mim</a>
+        <a href="#">Projetos</a>
+        <a href="Contato.html">Contato</a>
+    </div>
 
     <main>
         <section id="title-projeto">
@@ -44,10 +60,13 @@
                 </div>
                 <div class="media-card-1"></div>
                 <div class="bottom-card">
-                    <div class="bottom-text">Feito em conjunto do curso Desenvolvimento Web Completo 2021 para fins de estudo e conhecimento sobre as linguagens e o framework.</div>
+                    <div class="bottom-text">Feito em conjunto do curso Desenvolvimento Web Completo 2021 para fins de
+                        estudo e conhecimento sobre as linguagens e o framework.</div>
                     <div class="action-card">
-                        <a href="https://github.com/Arrudxx/Spotify-Clone" target="_blank"><button class="action">Ver codigo</button></a>
-                        <a href="https://github.com/Arrudxx/Spotify-Clone/archive/master.zip" target="_blank"><button class="action">Download</button></a>    
+                        <a href="https://github.com/Arrudxx/Spotify-Clone" target="_blank"><button class="action">Ver
+                                codigo</button></a>
+                        <a href="https://github.com/Arrudxx/Spotify-Clone/archive/master.zip" target="_blank"><button
+                                class="action">Download</button></a>
                     </div>
                 </div>
             </div>
@@ -58,10 +77,13 @@
                 </div>
                 <div class="media-card-2"></div>
                 <div class="bottom-card">
-                    <div class="bottom-text">Construido para o 2° trabalho semestral da faculdade junto com o meu grupo atuei criando o código e auxiliado em outras área como a documentação.</div>
+                    <div class="bottom-text">Construido para o 2° trabalho semestral da faculdade junto com o meu grupo
+                        atuei criando o código e auxiliado em outras área como a documentação.</div>
                     <div class="action-card">
-                        <a href="https://github.com/Arrudxx/Sistema-de-Clinicas" target="_blank"><button class="action">Ver codigo</button></a>
-                        <a href="https://github.com/Arrudxx/Sistema-de-Clinicas/archive/main.zip" target="_blank"><button class="action">Download</button></a>   
+                        <a href="https://github.com/Arrudxx/Sistema-de-Clinicas" target="_blank"><button
+                                class="action">Ver codigo</button></a>
+                        <a href="https://github.com/Arrudxx/Sistema-de-Clinicas/archive/main.zip"
+                            target="_blank"><button class="action">Download</button></a>
                     </div>
                 </div>
             </div>
@@ -73,10 +95,13 @@
                 </div>
                 <div class="media-card-3"></div>
                 <div class="bottom-card">
-                    <div class="bottom-text">Feito com HTML 5 puro em conjunto do curso Desenvolvimento Web Completo 2021 para fins de estudo sobre o HTML 5.</div>
+                    <div class="bottom-text">Feito com HTML 5 puro em conjunto do curso Desenvolvimento Web Completo
+                        2021 para fins de estudo sobre o HTML 5.</div>
                     <div class="action-card">
-                        <a href="https://github.com/Arrudxx/Projeto-De-Site-Para-Universidade" target="_blank"><button class="action">Ver codigo</button></a>
-                        <a href="https://github.com/Arrudxx/Projeto-De-Site-Para-Universidade/archive/main.zip" target="_blank"><button class="action">Download</button></a>
+                        <a href="https://github.com/Arrudxx/Projeto-De-Site-Para-Universidade" target="_blank"><button
+                                class="action">Ver codigo</button></a>
+                        <a href="https://github.com/Arrudxx/Projeto-De-Site-Para-Universidade/archive/main.zip"
+                            target="_blank"><button class="action">Download</button></a>
                     </div>
                 </div>
             </div>
@@ -103,5 +128,7 @@
     </footer>
 
 </body>
+
+<script src="js/script.js"></script>
 
 </html>
