--- a/index.html
+++ b/index.html
@@ -23,13 +23,29 @@
                 <a href="">Daniel Arruda</a>
             </div>
             <div class="topnav-right">
-                <a class="active" href="#">Home</a>
+                <div class="active" id="btnMenuMobile">
+                    <span class="line-hamburger"></span>
+                    <span class="line-hamburger"></span>
+                    <span class="line-hamburger"></span>
+                </div>
+                <a href="#">Home</a>
                 <a href="SobreMim.html">Sobre mim</a>
                 <a href="Projetos.html">Projetos</a>
                 <a href="Contato.html">Contato</a>
             </div>
         </div>
     </header>
+
+    <div class="menu-mobile disable" id="menuMobile">
+        <div class="active" id="btnFechaMenuMobile">
+            <span class="line-hamburger" style="transform: rotate(45deg);"></span>
+            <span class="line-hamburger" style="transform: rotate(-45deg);"></span>
+        </div>
+        <a href="#">Home</a>
+        <a href="SobreMim.html">Sobre mim</a>
+        <a href="Projetos.html">Projetos</a>
+        <a href="Contato.html">Contato</a>
+    </div>
 
     <main>
         <section id="banner">
@@ -54,7 +70,7 @@
 
         <section id="about">
             <h1>Um Pouco Sobre Mim</h1>
-            <div class="grid-container">
+            <div class="grid-container" style="max-width: 100vw;overflow: hidden;">
                 <div class="grid-about">
                     <h2>Console.WriteLine("Hello Word");</h2>
 
@@ -94,7 +110,8 @@
         </p>
         <p class="copyright">Copyright © 2021 Daniel Arruda.</p>
     </footer>
-
 </body>
+
+    <script src="js/script.js"></script>
 
 </html>
