Responsividade para celulares em todas as paginas

--- a/Contato.html
+++ b/Contato.html
@@ -30,10 +30,10 @@
                     <span class="line-hamburger"></span>
                     <span class="line-hamburger"></span>
                 </div>
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 <a href="SobreMim.html">Sobre mim</a>
                 <a href="Projetos.html">Projetos</a>
-                <a href="Contato.html">Contato</a>
+                <a href="#">Contato</a>
             </div>
         </div>
     </header>
@@ -65,47 +65,30 @@
                     <div class="img-teste">
                         <h3>Endereço:</h3>
                         <a href="https://www.google.com/maps/place/S%C3%A3o+Paulo,+SP/@-23.6821604,-46.8754915,10z/data=!3m1!4b1!4m5!3m4!1s0x94ce448183a461d1:0x9ba94b08ff335bae!8m2!3d-23.5505199!4d-46.6333094">
-                            <h4>&nbsp;&nbsp;São Paulo - SP</h4>
+                            <h4>São Paulo - SP</h4>
                         </a>
                     </div>
 
                     <div class="img-teste">
                         <h3>Email:</h3>
                         <a href="mailto:D4niel.arruda@gmail.com">
-                            <h4>&nbsp;&nbsp;D4niel.arruda@gmail.com</h4>
+                            <h4>D4niel.arruda@gmail.com</h4>
                         </a>
                     </div>
 
                     <div class="img-teste">
                         <h3>Github:</h3>
                         <a href="https://github.com/Arrudxx">
-                            <h4>&nbsp;&nbsp;https://github.com/Arrudxx</h4>
+                            <h4>https://github.com/Arrudxx</h4>
                         </a>
                     </div>
 
                     <div class="img-teste">
                         <h3>Linkedin:</h3>
                         <a href="https://github.com/Arrudxx">
-                            <h4>&nbsp;&nbsp;https://www.linkedin.com/in/daniel-arruda-4623331a4/</h4>
+                            <h4>https://www.linkedin.com/in/daniel-arruda-4623331a4/</h4>
                         </a>
                     </div>
-
-
-
-
-
-
-
-
-
-                    <!--  
-                    <div class="img-teste">
-                        <i class="em em-email" aria-role="presentation" aria-label="ENVELOPE"></i>Email <a href="">d4niel.arruda@gmail.com</a>
-                        <br>
-                        <br>
-                        <i class="em em-flag-br" aria-role="presentation" aria-label="Brazil Flag"></i> São Paulo - SP
-                    </div>
-                    -->
                 </div>
                 <div class="grid-foto">
                     <img class="foto-about" src="img/undraw_Destination.svg" alt="" width="450px">
